# ff-model

./: .gitignore  README.md  pyproject.toml  requirements.txt  test_requirements.txt
.github/workflows/: python-tests.yml
data/: 2025_fantasy_players.csv
notebooks/: code.txt  fantasy_data_collection.ipynb  fantasy_modelling.ipynb
src/: analysis.py  feature_engineering.py  modelling.py  preprocess.py  processor.py  rankings.py  scraper.py
test/: test_analysis.py  test_data_analysis.py  test_engineer.py  test_modelling.py  test_processor.py  test_scraper.py
